refined phone number regex; fixed menu spacing issue on edge

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -147,7 +147,7 @@ input, textarea {
 	border-radius: 5px 5px 0 0;
 	padding-right: 0;
 	padding-left: 0;
-	width: calc((100% - 50px) / 6)
+	width: calc((100% - 52px) / 6)
 }
 .menu-item + .menu-item {
 	margin-left: 10px
